Replace DataTypeConverter with compatible base64 encoding. Fixes #53